Fix z-index conflict

--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -298,7 +298,7 @@ body.auth #header {
     width: var(--dashboard-sidebar-width);
     background-color: white;
     height: 100%;
-    z-index: 1200;
+    z-index: 1020;
 }
 
 .dashboard__main {
@@ -656,6 +656,7 @@ body.auth #header {
 
 .ae-confirmation__modal {
     position: absolute;
+    z-index: 1050;
     width: 100%;
     height: 100%;
     top: 0;
